--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "test-goit",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/Vildanov-Roman/Test-GoIT",
+  "homepage": "https://Vildanov-Roman.github.com/test-goit",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
