--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "test-goit",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Vildanov-Roman.github.io/test-goit/",
+  "homepage": "",
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@testing-library/jest-dom": "^5.16.3",
